--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
-APP_NAME=Laravel
+APP_NAME="Demo shop"
 APP_ENV=local
-APP_KEY=
-APP_DEBUG=true
+APP_KEY=base64:zuGwMe6X/3E0Gwei53FJdwXPMLk8v6rVtLpKZoe0/mg=
+APP_DEBUG=false
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
@@ -9,7 +9,7 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=demo_shop
 DB_USERNAME=root
 DB_PASSWORD=
 
